Реализован сервлет UserServlet для доступа по url /api/users/* Обновлены вспомогательные классы