@@ -39,7 +39,7 @@ class FunctionsDAOTest {
 
     @Test
     void insertFunction() {
-        int functionId = functionsDAO.insertFunction("y=2", ids.getFirst(), "constant");
+        int functionId = functionsDAO.insertFunction("y=2", ids.get(0), "constant");
         Function function = functionsDAO.getFunctionById(functionId);
         assertEquals("y=2", function.getName());
     }
@@ -49,7 +49,7 @@ class FunctionsDAOTest {
         Function function = functionsDAO.getFunctionById(firstFunctionId);
         assertEquals(firstFunctionId, function.getId());
         assertEquals("y=1", function.getName());
-        assertEquals(ids.getFirst(), function.getOwner_id());
+        assertEquals(ids.get(0), function.getOwner_id());
     }
 
     @Test
@@ -61,7 +61,7 @@ class FunctionsDAOTest {
     void updateName() {
         functionsDAO.updateName("y=3", firstFunctionId);
         Function function = functionsDAO.getFunctionById(firstFunctionId);
-        assertEquals(ids.getFirst(), function.getOwner_id());
+        assertEquals(ids.get(0), function.getOwner_id());
         assertEquals("constant", function.getType());
     }
 
@@ -70,14 +70,14 @@ class FunctionsDAOTest {
         functionsDAO.updateName("y=x+3", firstFunctionId);
         functionsDAO.updateType("tabulated", firstFunctionId);
         Function function = functionsDAO.getFunctionById(firstFunctionId);
-        assertEquals(ids.getFirst(), function.getOwner_id());
+        assertEquals(ids.get(0), function.getOwner_id());
         assertEquals("tabulated", function.getType());
     }
 
     @Test
     void getAllFunctions() {
         List<Function> functions = functionsDAO.getAllFunctions();
-        assertEquals(firstFunctionId, functions.getFirst().getId());
+        assertEquals(firstFunctionId, functions.get(0).getId());
         assertEquals(secondFunctionId, functions.get(1).getId());
         assertEquals(thirdFunctionId, functions.get(2).getId());
     }
